# cse220_hw3

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
images/originals/: testing.ppm  wolfie-tiny.ppm
include/: image.h  qtree.h
src/: hw3_main.c  image.c  qtree.c
